fix: remove the flex classes of the display component to allow horizontal scrolling

--- a/src/components/display/display.css
+++ b/src/components/display/display.css
@@ -7,6 +7,7 @@
   width: 100%;
   height: 15vh;
   font-family: 'ZCOOL QingKe HuangYou', cursive;
+  text-align: end;
 }
 
 /* Medium devices (tablets, 768px and up) */
